fix: align

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -25,7 +25,6 @@
 
         a {
             padding: 0;
-            margin-right: 1rem;
             margin-top: 0.5rem;
             text-decoration: none!important;
             color: initial!important; /* Restablece el color predeterminado del texto */
